-------------------------------------------------
GearSwap 0.801 - Combatted double precasts, fixed a variety of nil errors, and made Paralysis work (hopefully).
-------------------------------------------------
GearSwap 0.800 - Added pretarget and moved precast to outgoing_chunk. Changed "buff_change()" to pass a boolean instead of a string indicating whether the buff was gained or lost.
-------------------------------------------------
GearSwap 0.723 - Removed a debug message, updated documentation, and refactored equip_processing.lua extensively.
-------------------------------------------------
GearSwap 0.722 - Changed the ranged attack spell table to reflect the resources. Added spell.interrupted boolean. Added a persistent spell for ambiguous interruption message cases. Changed interrupted action.type to "Interruption"... Many things.
-------------------------------------------------
GearSwap 0.721 - Adjusted for API changes and related documentation.
-------------------------------------------------
GearSwap 0.720 - Fixed Pet TP magnitude, exposed OS library, updated documentation, improved file name handling (a bit), and minor changes to the validation algorithm.
-------------------------------------------------
GearSwap 0.719 - Removed dependence on sets library. Fixed error that occured when there was no subjob.
-------------------------------------------------
GearSwap 0.718 - Fixed player.status. Added the validate command. Improved export sets' efficiency. Updated documentation.
-------------------------------------------------
GearSwap 0.717 - Fixed equipment removal. Added sets.naked. Handled category 11 outgoing actions (homepointing). Updated documentation.
-------------------------------------------------
GearSwap 0.716 - Export now looks up the proper equipment slot. Changed syntax for equipping an empty slot to be less ambiguous. Fixed unequipping on zone (I think).
-------------------------------------------------